--- a/Client/index.html
+++ b/Client/index.html
@@ -19,6 +19,7 @@
             YouGlance
         </div>
         </nav>
+        <div id="home">
         <h6 class="text-center text-dark mt-3">Enter any keyword or click the suggested Entity</h6>
         <div class="form mt-2">
             <form>
@@ -26,20 +27,25 @@
                     <input type="text" name="question" id="keyword" placeholder="Question..." class="form-control">
                 </div>
                 <button class="btn btn-dark" id="btn1" disabled>Submit</button>
-                <button class="btn btn-dark ml-2" id="btn2" >Show Graph</button>
+                <button class="btn btn-dark ml-2" id="btn2" disabled>Show Graph</button>
             </form>
         </div>
-        </div>
+        
         <div id="output">
             <div class="output mt-2" id="EntityOutput"></div>
             <div class="output mt-2" id="TableOutput"></div>
         </div>
-        <div id="graph-output">
-            <!-- <button id ="btn3" class="btn btn-dark">Go Back</button>
-            <h2 class="text-center" id="loadingHeader">Loading...</h2> -->
+    </div>
+    
+        <div id="graph-output" style="display: none;">
+            <button id ="btn3" class="btn btn-dark mt-4">Go Back</button>
+            <h2 class="text-center mt-4" id="loadingHeader">Loading...</h2>
+            <div id="graphs">
             <canvas id="bar-chart" width="350" height="300"></canvas>
             <canvas id="donut-chart" width="350" height="300"></canvas>
+            </div>
         </div>
+    </div>
     </div>
     <script src="./js/chart.js"></script>
     <script src="./js/main.js"></script>
