ADD:Error handler for entity

--- a/Client/index.html
+++ b/Client/index.html
@@ -15,7 +15,7 @@
     <div class="container ">
         <div class="text-center">
         <nav class="navbar navbar-dark bg-dark">
-        <div class="text-center text-light my-1" style="margin: auto; font-size: 30px" href="#">
+        <div class="text-center text-light " style="margin: auto; font-size: 30px" href="#">
             YouGlance
         </div>
         </nav>
